--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
     <!-- Mobile: Bottom Half (h-1/2) | Desktop: Right Half (w-1/2) -->
     <div class="image-container w-full h-1/2 md:h-full md:w-1/2" id="container">
         <!-- Images -->
-        <img src="https://images.unsplash.com/photo-1540959733332-eab4deabeeaf?q=80&w=2994&auto=format&fit=crop" 
+        <img src="image.JPG" 
              alt="City Street" 
              class="layer bw-layer"
              draggable="false">
              
-        <img src="https://images.unsplash.com/photo-1540959733332-eab4deabeeaf?q=80&w=2994&auto=format&fit=crop" 
+        <img src="image.JPG" 
              alt="City Street Color" 
              class="layer color-layer"
              draggable="false"
@@ -197,3 +197,4 @@
     </script>
 </body>
 </html>
+
