--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
     <!-- Mobile: Bottom Half (h-1/2) | Desktop: Right Half (w-1/2) -->
     <div class="image-container w-full h-1/2 md:h-full md:w-1/2" id="container">
         <!-- Images -->
-        <img src="image.JPG" 
+        <img src="DSC01262.JPG" 
              alt="City Street" 
              class="layer bw-layer"
              draggable="false">
              
-        <img src="image.JPG" 
+        <img src="DSC01262.JPG" 
              alt="City Street Color" 
              class="layer color-layer"
              draggable="false"
@@ -197,4 +197,5 @@
     </script>
 </body>
 </html>
+
 
