--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
     <div class="w-full h-1/2 md:h-full md:w-1/2 flex flex-col justify-center px-8 md:px-16 overflow-y-auto">
         <div class="max-w-lg mx-auto md:mx-0">
             <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-6 tracking-tighter">
-                Nocturnal <br> Tokyo.
+                Pranesh <br> Shreeja
             </h1>
             <p class="text-gray-600 text-lg leading-relaxed mb-6">
-                The city sleeps, but the lights never do. Experience the hidden vibrancy of the streets through a lens that captures what the naked eye might miss.
+                Come along for the Journey towards forever after.
             </p>
             <p class="text-gray-500 text-sm">
-                Hover over the image to reveal the true colors of the night.
+                Hover over the image to reveal the true colors of love.
             </p>
         </div>
     </div>
@@ -197,5 +197,6 @@
     </script>
 </body>
 </html>
+
 
 
