--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
 
         .bw-layer {
-            filter: grayscale(100%) contrast(1.1);
+            filter: grayscale(100%) contrast(1.2);
             z-index: 1;
         }
 
@@ -125,7 +125,7 @@
     <div class="w-full h-2/5 md:h-full md:w-2/5 flex flex-col justify-center px-8 md:px-16 overflow-y-auto">
         <div class="max-w-lg mx-auto md:mx-0">
             <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-6 tracking-tighter">
-                Pranesh <br> Shreeja
+                Pranesh.Shreeja
             </h1>
             <p class="text-gray-600 text-lg leading-relaxed mb-6">
                 Come along for the Journey towards forever after.
@@ -197,6 +197,7 @@
     </script>
 </body>
 </html>
+
 
 
 
