--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Reveal Interaction</title>
+    <title>Pranesh Weds Shreeja</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -197,6 +197,7 @@
     </script>
 </body>
 </html>
+
 
 
 
